# telegram-publisher

./: .env  .gitignore  README.md  pyproject.toml
telegram-publisher/: pyproject.toml
telegram-publisher/telegram_publisher/: dto.py  images.py  keyboard.py
telegram_publisher/: __init__.py  dto.py  errors.py  publisher.py
